# codesign.bzl

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  README.md  codesign.bzl  release-prebuilts.sh  release.sh
.bcr/: README.md  metadata.template.json  source.template.json
.github/workflows/: build_release.sh  ci.yml  publish-prebuilts.yml  publish-to-bcr.yml  publish.yml  release.yml  release_prep.sh
patches/: BUILD.bazel  bzip2-windows-header-case.patch  ring-windows-aarch64-clang-cl.patch  windows-support-default-sdk.patch
prebuilt/: BUILD.bazel
private/: defs.bzl  lib.rs
toolchain/: BUILD.bazel
