load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

alias(
    name = "codesign",
    actual = "@crates//:apple-codesign__rcodesign",
)

build_test(
    name = "codesign_build_test",
    targets = [":codesign"],
)

[
    platform_transition_filegroup(
        name = "for_" + triple,
        srcs = [":codesign"],
        target_platform = "@rules_rs//rs/platforms:" + triple,
    )
    for triple in [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
        "aarch64-pc-windows-msvc",
        "x86_64-pc-windows-msvc",
    ]
]

filegroup(
    name = "for_all_platforms",
    srcs = [
        "for_aarch64-apple-darwin",
        "for_aarch64-pc-windows-msvc",
        "for_aarch64-unknown-linux-musl",
        "for_x86_64-apple-darwin",
        "for_x86_64-pc-windows-msvc",
        "for_x86_64-unknown-linux-musl",
    ],
)
